# gtui-suite

./: .gitignore  CLAUDE.md  Cargo.toml  manual-tests-tier1.md
apps/api-tester/: Cargo.toml  SPEC.md
apps/api-tester/src/: app.rs  config.rs  database.rs  http_client.rs  main.rs  request.rs  ui.rs
apps/backup-manager/: Cargo.toml  SPEC.md
apps/backup-manager/src/: app.rs  config.rs  database.rs  main.rs  profile.rs  ui.rs
apps/chat-client/: Cargo.toml  SPEC.md
apps/chat-client/src/: app.rs  config.rs  main.rs  models.rs  ui.rs
apps/cheatsheet-browser/: Cargo.toml  SPEC.md
apps/cheatsheet-browser/src/: app.rs  cheatsheets.rs  config.rs  main.rs  ui.rs
apps/ci-dashboard/: Cargo.toml  SPEC.md
apps/ci-dashboard/src/: app.rs  config.rs  main.rs  models.rs  providers.rs  ui.rs
apps/cli-wizard-generator/: SPEC.md
apps/config-editor/: Cargo.toml  SPEC.md
apps/config-editor/src/: app.rs  config.rs  formats.rs  main.rs  ui.rs
apps/csv-viewer/: Cargo.toml  SPEC.md
apps/csv-viewer/src/: app.rs  data.rs  main.rs  ui.rs
apps/db-client/: Cargo.toml  SPEC.md
apps/db-client/src/: app.rs  config.rs  database.rs  main.rs  ui.rs
apps/diff-tool/: Cargo.toml  SPEC.md
apps/diff-tool/src/: app.rs  diff.rs  main.rs  ui.rs
apps/docker-manager/: Cargo.toml  SPEC.md
apps/docker-manager/src/: app.rs  config.rs  container.rs  docker_client.rs  main.rs  ui.rs
apps/email-client/: Cargo.toml  SPEC.md
apps/email-client/src/: app.rs  config.rs  main.rs  models.rs  ui.rs
apps/file-manager/: Cargo.toml  SPEC.md
apps/file-manager/src/: app.rs  config.rs  entry.rs  main.rs  pane.rs  ui.rs
apps/flashcard-trainer/: Cargo.toml  SPEC.md
apps/flashcard-trainer/src/: algorithm.rs  app.rs  config.rs  db.rs  main.rs  models.rs  ui.rs
apps/git-client/: Cargo.toml  SPEC.md
apps/git-client/src/: app.rs  config.rs  git_ops.rs  main.rs  ui.rs
apps/habit-tracker/: Cargo.toml  SPEC.md
apps/habit-tracker/src/: app.rs  config.rs  db.rs  main.rs  models.rs  ui.rs
apps/hex-editor/: Cargo.toml  SPEC.md
apps/hex-editor/src/: app.rs  buffer.rs  main.rs  ui.rs
apps/k8s-dashboard/: Cargo.toml  SPEC.md
apps/k8s-dashboard/src/: app.rs  config.rs  main.rs  models.rs  ui.rs
apps/kanban-integrated/: SPEC.md
apps/kanban-standalone/: Cargo.toml  SPEC.md
apps/kanban-standalone/src/: app.rs  board.rs  config.rs  database.rs  main.rs  ui.rs
apps/log-anomaly-detector/: Cargo.toml  SPEC.md
apps/log-anomaly-detector/src/: app.rs  config.rs  detector.rs  main.rs  models.rs  ui.rs
apps/log-viewer/: Cargo.toml  SPEC.md
apps/log-viewer/src/: app.rs  config.rs  log_entry.rs  main.rs  parser.rs  ui.rs  watcher.rs
apps/metrics-viewer/: Cargo.toml  SPEC.md
apps/metrics-viewer/src/: app.rs  config.rs  main.rs  models.rs  ui.rs
apps/network-monitor/: Cargo.toml  SPEC.md
apps/network-monitor/src/: app.rs  connections.rs  main.rs  ui.rs
apps/note-manager-backlinks/: Cargo.toml  SPEC.md
apps/note-manager-backlinks/src/: app.rs  config.rs  db.rs  main.rs  models.rs  ui.rs
apps/note-manager-daily/: Cargo.toml  SPEC.md
apps/note-manager-daily/src/: app.rs  config.rs  db.rs  main.rs  models.rs  ui.rs
apps/note-manager-folder/: Cargo.toml  SPEC.md
apps/note-manager-folder/src/: app.rs  config.rs  main.rs  models.rs  storage.rs  ui.rs
apps/note-manager-zettelkasten/: Cargo.toml  SPEC.md
apps/note-manager-zettelkasten/src/: app.rs  config.rs  db.rs  main.rs  models.rs  ui.rs
apps/permissions-auditor-consumer/: Cargo.toml  SPEC.md
apps/permissions-auditor-consumer/src/: app.rs  auditor.rs  config.rs  main.rs  ui.rs
apps/permissions-auditor-enterprise/: SPEC.md
apps/personal-wiki/: Cargo.toml  SPEC.md
apps/personal-wiki/src/: app.rs  config.rs  db.rs  main.rs  models.rs  ui.rs
apps/port-scanner-full/: SPEC.md
apps/port-scanner-local/: Cargo.toml  SPEC.md
apps/port-scanner-local/src/: app.rs  config.rs  main.rs  scanner.rs  ui.rs
apps/port-scanner-passive/: SPEC.md
apps/process-monitor/: Cargo.toml  SPEC.md
apps/process-monitor/src/: app.rs  config.rs  main.rs  process.rs  ui.rs
apps/queue-monitor-kafka/: Cargo.toml  SPEC.md
apps/queue-monitor-kafka/src/: app.rs  config.rs  models.rs  ui.rs
apps/queue-monitor-rabbitmq/: Cargo.toml  SPEC.md
apps/queue-monitor-rabbitmq/src/: app.rs  client.rs  config.rs  main.rs  models.rs  ui.rs
apps/queue-monitor-redis/: Cargo.toml  SPEC.md
apps/queue-monitor-redis/src/: app.rs  config.rs  main.rs  models.rs  ui.rs
apps/server-dashboard-agent/: SPEC.md
apps/server-dashboard-ssh/: Cargo.toml  SPEC.md
apps/server-dashboard-ssh/src/: app.rs  config.rs  database.rs  main.rs  server.rs  ui.rs
apps/service-manager/: Cargo.toml  SPEC.md
apps/service-manager/src/: app.rs  config.rs  main.rs  services.rs  ui.rs
apps/ssh-hub/: Cargo.toml  SPEC.md
apps/ssh-hub/src/: app.rs  config.rs  database.rs  host.rs  main.rs  ssh_config.rs  ui.rs
apps/task-manager/: Cargo.toml  SPEC.md
apps/task-manager/src/: app.rs  config.rs  db.rs  main.rs  models.rs  ui.rs
apps/task-scheduler/: Cargo.toml  SPEC.md
apps/task-scheduler/src/: app.rs  config.rs  db.rs  main.rs  models.rs  ui.rs
apps/time-tracker/: Cargo.toml  SPEC.md
apps/time-tracker/src/: app.rs  config.rs  db.rs  main.rs  models.rs  pomodoro.rs  ui.rs
apps/tui-shell-floating/: Cargo.toml  SPEC.md
apps/tui-shell-floating/src/: app.rs  config.rs  main.rs  ui.rs  window.rs
apps/tui-shell-fullscreen/: Cargo.toml  SPEC.md
apps/tui-shell-fullscreen/src/: app.rs  config.rs  main.rs  ui.rs
apps/tui-shell-tabbed/: Cargo.toml  SPEC.md
apps/tui-shell-tabbed/src/: app.rs  config.rs  main.rs  tab.rs  ui.rs
apps/tui-shell-tiled/: Cargo.toml  SPEC.md
apps/tui-shell-tiled/src/: app.rs  config.rs  container.rs  main.rs  ui.rs
crates/tui-keybinds/: Cargo.toml  SPEC.md
crates/tui-keybinds/src/: binding.rs  conflict.rs  (+9 more)
crates/tui-plugins/: Cargo.toml  SPEC.md
crates/tui-shell/: Cargo.toml  SPEC.md
crates/tui-testing/: Cargo.toml  SPEC.md
crates/tui-theme/: Cargo.toml  SPEC.md
crates/tui-widgets/: Cargo.toml  SPEC.md
docs/book/: book.toml
(+89 files in other folders)
