[workspace]
resolver = "2"

members = [
    # Shared crates
    "crates/tui-widgets",
    "crates/tui-theme",
    "crates/tui-keybinds",
    "crates/tui-shell",
    "crates/tui-testing",
    "crates/tui-plugins",

    # Tier 1: Simple apps
    "apps/habit-tracker",
    "apps/cheatsheet-browser",
    "apps/flashcard-trainer",
    "apps/time-tracker",

    # Tier 2: Moderate apps
    "apps/task-manager",
    "apps/note-manager-folder",
    "apps/note-manager-backlinks",
    "apps/note-manager-daily",
    "apps/note-manager-zettelkasten",
    "apps/personal-wiki",
    "apps/config-editor",
    "apps/task-scheduler",
    "apps/service-manager",
    "apps/process-monitor",

    # Tier 3: Complex apps
    "apps/log-viewer",
    "apps/file-manager",
    "apps/docker-manager",
    "apps/ssh-hub",
    "apps/backup-manager",
    "apps/server-dashboard-ssh",
    "apps/diff-tool",
    # "apps/server-dashboard-agent",
    # "apps/network-monitor",

    # Tier 4: Advanced apps
    "apps/hex-editor",
    "apps/csv-viewer",
    "apps/kanban-standalone",
    "apps/git-client",
    # "apps/api-tester",
    # "apps/ci-dashboard",
    # "apps/k8s-dashboard",
    # "apps/db-client",
    # "apps/metrics-viewer",
    # "apps/queue-monitor-rabbitmq",
    # "apps/queue-monitor-kafka",
    # "apps/queue-monitor-redis",
    # "apps/kanban-integrated",
    # "apps/cli-wizard-generator",
    # "apps/chat-client",
    # "apps/email-client",
    # "apps/log-anomaly-detector",
    # "apps/port-scanner-local",
    # "apps/port-scanner-full",
    # "apps/port-scanner-passive",
    # "apps/permissions-auditor-consumer",
    # "apps/permissions-auditor-enterprise",
    # "apps/tui-shell-tiled",
    # "apps/tui-shell-floating",
    # "apps/tui-shell-tabbed",
    # "apps/tui-shell-fullscreen",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/georgeqle/tui-suite"
authors = ["georgeqle"]

[workspace.dependencies]
# TUI framework
ratatui = "0.29"
crossterm = { version = "0.28", features = ["serde"] }

# Async runtimes (app-specific choice)
tokio = { version = "1", features = ["full"] }
async-std = "1"
smol = "2"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
directories = "5"

# Data processing
polars = { version = "0.45", features = ["lazy", "csv", "parquet"] }

# Networking
reqwest = { version = "0.12", features = ["json"] }
pnet = "0.35"

# Git
git2 = "0.19"

# Fuzzy finding
fuzzy-matcher = "0.3"
nucleo-matcher = "0.3"

# Testing
insta = "1"
proptest = "1"

# Shared crates (internal)
tui-widgets = { path = "crates/tui-widgets" }
tui-theme = { path = "crates/tui-theme" }
tui-keybinds = { path = "crates/tui-keybinds" }
tui-shell = { path = "crates/tui-shell" }
tui-testing = { path = "crates/tui-testing" }
tui-plugins = { path = "crates/tui-plugins" }
