[package]
name = "backup-manager"
version = "0.1.0"
edition = "2021"
description = "Multi-backend backup manager with scheduling and restore browser"

[dependencies]
# Shared crates
tui-widgets = { workspace = true }
tui-theme = { workspace = true }
tui-keybinds = { workspace = true }

# TUI framework
ratatui = { workspace = true }
crossterm = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full", "process"] }

# Database
rusqlite = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Date/time and IDs
chrono = { workspace = true }
uuid = { workspace = true }

# Cron scheduling
cron = "0.13"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Config directory
directories = "5"
