[package]
name = "chat-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-protocol chat client TUI (IRC, Matrix, Discord)"

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = "0.24"
futures-util = "0.3"
directories = "5"
