[package]
name = "ci-dashboard"
version = "0.1.0"
edition = "2021"
description = "Multi-CI system dashboard with unified interface"
license = "MIT"

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"
