[package]
name = "csv-viewer"
version = "0.1.0"
edition = "2021"
description = "CSV/TSV data viewer with sorting and filtering"

[dependencies]
tui-widgets = { workspace = true }
tui-theme = { workspace = true }
tui-keybinds = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
directories = "5"
csv = "1.3"
