[package]
name = "db-client"
version = "0.1.0"
edition = "2021"
description = "Database client for SQLite, PostgreSQL, and MySQL"

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
directories = "5"
