[package]
name = "diff-tool"
version = "0.1.0"
edition = "2021"
description = "File and directory diff with side-by-side view"

[dependencies]
tui-widgets = { workspace = true }
tui-theme = { workspace = true }
tui-keybinds = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
directories = "5"
similar = "2"
walkdir = "2"
