[package]
name = "docker-manager"
version = "0.1.0"
edition = "2021"
description = "Docker/Podman container and image management TUI"

[dependencies]
# Shared crates
tui-widgets = { workspace = true }
tui-theme = { workspace = true }
tui-keybinds = { workspace = true }

# TUI framework
ratatui = { workspace = true }
crossterm = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Date/time
chrono = { workspace = true }

# Docker API client
bollard = "0.18"
futures-util = "0.3"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Config directory
directories = "5"
