[package]
name = "file-manager"
version = "0.1.0"
edition = "2021"
description = "Dual-pane file manager with preview support"

[dependencies]
# Shared crates
tui-widgets = { workspace = true }
tui-theme = { workspace = true }
tui-keybinds = { workspace = true }

# TUI framework
ratatui = { workspace = true }
crossterm = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true }
toml = { workspace = true }

# Date/time
chrono = { workspace = true }

# File system
walkdir = "2"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Config directory
directories = "5"
dirs = "5"
