[package]
name = "git-client"
version = "0.1.0"
edition = "2021"
description = "Full-featured Git client with local operations"

[dependencies]
tui-widgets = { workspace = true }
tui-theme = { workspace = true }
tui-keybinds = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
git2 = { version = "0.19", default-features = false }
serde = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
directories = "5"
