[package]
name = "log-anomaly-detector"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Log analysis with pattern matching and anomaly detection"

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
directories = "5"
regex = "1"
notify = "6"
