[package]
name = "log-viewer"
version = "0.1.0"
edition = "2021"
description = "Multi-file log viewer with structured parsing"

[dependencies]
# Shared crates
tui-widgets = { workspace = true }
tui-theme = { workspace = true }
tui-keybinds = { workspace = true }

# TUI framework
ratatui = { workspace = true }
crossterm = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Date/time
chrono = { workspace = true }

# File watching
notify = "6"

# Regex for search
regex = "1"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Config directory
directories = "5"
