[package]
name = "metrics-viewer"
version = "0.1.0"
edition = "2021"
description = "Prometheus/Grafana metrics viewer with PromQL support"
license = "MIT"

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
