[package]
name = "note-manager-backlinks"
description = "Bi-directional linked note manager TUI (Roam/Obsidian style)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]

ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
directories = "5"
regex = "1"
