[package]
name = "note-manager-daily"
description = "Daily notes journal TUI with calendar navigation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]

ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
directories = "5"
