[package]
name = "port-scanner-local"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Local network port scanner for device discovery"

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
directories = { workspace = true }
rusqlite = { workspace = true }
