[package]
name = "process-monitor"
version = "0.1.0"
edition = "2021"
description = "Linux process monitor with cgroup/namespace awareness"

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
directories = { workspace = true }
chrono = { workspace = true }
libc = "0.2"
