[package]
name = "queue-monitor-kafka"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kafka cluster monitoring and management TUI"

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
directories = "5"
